--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap" rel="stylesheet">
     <title>fxiq</title>
+    <meta name="description" content="fxiq" />
+    <meta property="og:description" content="fxiq" />
+    <meta name="theme-color" content="#FFFFFF">
+    <meta property="og:title" content="fxiq" />
     <style>
       body {
         margin: 0;
