--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         font-weight: 900;
         text-shadow: 0px 0px 50px #fff;
         font-family: 'Poppins', sans-serif;
+        -webkit-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
       }
     </style>
   </head>
